Fixed: z-index problem with sandwich is finnaly over the canvas due to ym weird implentation of the way startPhsyisc was called

--- a/style.css
+++ b/style.css
@@ -50,7 +50,10 @@ body{
     margin-right: 1.4em;
 }
 #physic{
+    z-index: 1000 !important; /* en-dessous du canvas */
     position: relative;
+    width: auto;
+    height: auto;
 }
 #physic img {
     position: absolute;
@@ -128,5 +131,5 @@ body{
 
 canvas{
     position: relative;
-    z-index: 1 ;
+    z-index: 0;
 }
